Added intro animation

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 </head>
 
 <body>
-    <header class="header">
+    <div class="welcome">
         <div class="text-box">
             <h1 class="heading-primary">
                 <span class="heading-primary-main">Black Jack</span>
                 <span class="heading-primary-sub">ServerLess by Dario Valles</span>
             </h1>
         </div>
-    </header>
+        </header>
 
 </body>
 
