Added Button Play

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
                 <span class="heading-primary-main">Black Jack</span>
                 <span class="heading-primary-sub">ServerLess by Dario Valles</span>
             </h1>
+            <a href="#" class="btn btn-white">Let's play</a>
         </div>
-        </header>
+    </div>
 
 </body>
 
