--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <span class="heading-primary-main">Black Jack</span>
                 <span class="heading-primary-sub">ServerLess by Dario Valles</span>
             </h1>
-            <a href="#" class="btn btn-white">Let's play</a>
+            <a href="#" class="btn btn-white btn-animated">Let's play</a>
         </div>
     </div>
 
